Fix text wrap issue for large challenge descriptions

--- a/dojo_theme/static/css/custom.css
+++ b/dojo_theme/static/css/custom.css
@@ -399,6 +399,7 @@ p[data-hide="true"] {
     display: flex;
     align-items: center;
     flex-grow: 1;
+    flex-wrap: wrap;
 }
 
 .challenge-active {
